vlib/v/parser/tests/module_import_same_symbol2_err.out
vlib/v/parser/tests/module_import_same_symbol2_err.vv:1:20: error: cannot register symbol `max`, it was already imported
    1 | import math { max, max }
      |                    ~~~
